# coop-ingredient-scrape

./: .gitignore  README.md  pyproject.toml
src/: exceptions.py  get_coop_ingredients.py  ingredient_finders.py  page_object_models.py  scrape_coop.py  web_constants.py  web_scrapers.py
src/utils/: get_secrets.py
