[tool.poetry]
name = "coop-ingredient-scrape"
version = "0.1.0"
description = "Scrapes ingredients for foods available at our local food coop"
authors = ["Chloe Vilain"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
requests-html = "^0.10.0"
lxml-html-clean = "^0.1.1"
selenium = "^4.19.0"
webdriver-manager = "^4.0.1"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
